# TraceGuard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Compose.yaml  Compose.yaml   Dockerfile  Makefile  README.md  buf.gen.yaml  build.rs  docker-compose.yml  go.mod  porter.yaml
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
cli/: dagger.go  main.go  traceguard_cli.go
cli/src/: main.rs
config/: dagger_pipeline.go  default.toml  grafana-dashboard.json  porter_bundle.yml  prometheus.yml  sbom_policy.rego
dagger/: pipeline.go
deployment/docker/: Dockerfile
deployment/kubernetes/: deployment.yaml  service.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
migrations/: 001_create_sboms_table.sql  002_create_provenance_records_table.sql  003_create_users_table.sql  20230101000000_create_users_table.sql  20230501000000_add_auth_tables.sql  20230501000000_create_compliance_reports.sql  20230501000000_create_sbom_relationships.sql  20230501000000_create_sbom_table.sql  20230501000000_initial_schema.sql  20230502000000_create_provenance_records.sql  20230502000000_create_provenance_table.sql
proto/: PROTO_STYLE_GUIDE.md  buf.gen.yaml  buf.yaml  traceguard.proto
proto/traceguard/v1/: traceguard.proto
scripts/: traceguard_init.sh
src/: api.rs  auth.rs  cli.rs  config.rs  database.rs  error.rs  feature_flags.rs  grpc.rs  main.rs  metrics.rs  websocket.rs
src/api/: auth.rs  compliance.rs  docs.rs  lifecycle.rs  mod.rs  provenance.rs  sbom.rs
src/api/v2/: sbom.rs
src/auth/: authorization.rs  jwt.rs  mod.rs  oidc.rs
src/chain_of_custody/: mod.rs
src/cli/: mod.rs
src/compliance/: mod.rs  oscal.rs  oscal_integration.rs
src/database/: mod.rs  models.rs
src/error/: mod.rs
src/grpc/: mod.rs
src/lifecycle/: lifecycle_manager.rs  mod.rs
src/logger/: mod.rs
src/metadata/: iceberg.rs
src/models/: mod.rs  provenance.rs  provenance_test.rs
src/observability/: mod.rs  telemetry.rs
src/plugins/: chainloop_integration.rs  dojo_integration.rs  guac_integration.rs  mod.rs  plugin_manager.rs
src/proto/: traceguard.proto
src/provenance/: provenance_api.rs
src/sbom/: parser.rs  sbom_parser.rs  slsa_provenance.rs
src/security/: auth.rs  encryption.rs  key_rotation.rs  mod.rs  secret_management.rs
src/services/: sbom_service.rs
src/storage/: blob_storage.rs  cache.rs  mock_blob_storage.rs  mod.rs
src/tenant/: mod.rs
src/utils/: error.rs
tests/: api_tests.rs  auth_tests.rs  encryption_tests.rs  integration_tests.rs  provenance_tests.rs  sbom_api_tests.rs  sbom_relationships_tests.rs  sbom_tests.rs
web_ui/: Cargo.toml  package-lock.json  package.json
web_ui/src/: App.tsx  Auth.tsx  ComplianceReport.tsx  Dashboard.tsx  auth.ts  main.rs
web_ui/src/api/: sbom.ts
web_ui/src/auth/: AuthContext.tsx
web_ui/src/components/: ComplianceReporter.tsx  ErrorMessage.tsx  (+6 more)
(+16 files in other folders)
