[package]
name = "traceguard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18"
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
tonic = "0.8"
prost = "0.11"
redis = { version = "0.22", features = ["tokio-comp"] }
jsonwebtoken = "8.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
mockall = "0.11"