[package]
name = "traceguard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
jsonwebtoken = "8.0"
openidconnect = "2.5"
async-trait = "0.1"
cyclonedx-bom = "0.4"
spdx-rs = "0.5"
swid = "0.2"
quick-xml = { version = "0.23", features = ["serialize"] }
log = "0.4"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
mockall = "0.11"